# go_package_deps

./: BUILD.bazel  WORKSPACE  go.mod  main.go
a/: BUILD.bazel  a.go
b/: BUILD.bazel  b.go  b.h
